--- a/package.json
+++ b/package.json
@@ -3,21 +3,43 @@
   "version": "0.0.0",
   "description": "Test task for Softcery, rock-paper-scissors game.",
   "private": true,
-  "type": "module",
+  "sideEffects": false,
   "scripts": {
-    "build": "tsc"
+    "dev": "webpack serve --config webpack.config.js --env development",
+    "build": "webpack --config webpack.config.js --env production",
+    "preview": "serve -s build -p 3013",
+    "analyze": "webpack-bundle-analyzer build/stats.json",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
+    "react-router": "^7.1.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@types/node": "^22.10.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "typescript": "^5.7.3"
+    "@types/react-router-dom": "^5.3.3",
+    "css-loader": "^6.10.0",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "dotenv-webpack": "^8.1.0",
+    "html-webpack-plugin": "^5.6.3",
+    "mini-css-extract-plugin": "^2.9.2",
+    "serve": "^14.2.4",
+    "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.11",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
+    "webpack": "^5.97.1",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
+    "webpack-merge": "^6.0.1"
   },
   "homepage": ""
 }
